# Star-Fleet-Battles

./: CMakeLists.txt
docs/: sfb_mechanics_reference.md
include/: board.h  hex.h  renderer.h  ship.h  weapons.h
src/: board.cpp  hex.cpp  main.cpp  renderer.cpp  renderer_sdl.cpp  ship.cpp
